add line wrapping

--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,9 @@
     <div class="header__inner">
       <nav class="header__menu menu">
         <a class="header__logo logo">
-          <img class="logo__image" src="img/logo-mobile.svg" srcset="img/logo-mobile.svg 767w, img/logo-tablet.svg 1149w, img/logo-desktop.svg" alt="Логотип">
+          <img class="logo__image"
+              src="img/logo-mobile.svg"
+              srcset="img/logo-mobile.svg 767w, img/logo-tablet.svg 1149w, img/logo-desktop.svg" alt="Логотип">
         </a>
         <button class="menu__btn" type="button" aria-label="Открыть меню">
           <span class="menu__line"></span>
@@ -26,16 +28,28 @@
           <span class="menu__line"></span>
         </button>
         <ul class="menu__list menu__list-catalog-order">
-          <li class="menu__item"><a class="menu__link menu__link-catalog" href="catalog.html">Каталог товаров</a></li>
-          <li class="menu__item"><a class="menu__link menu__link-order" href="form.html">Вязание на заказ</a></li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-catalog" href="catalog.html">Каталог товаров</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-order" href="form.html">Вязание на заказ</a>
+          </li>
         </ul>
         <ul class="menu__list menu__list-search-basket">
-          <li class="menu__item"><a class="menu__link menu__link-search" href="#">Поиск по сайту</a></li>
-          <li class="menu__item"><a class="menu__link menu__link-basket" href="#">Корзина: пока пуста</a></li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-search" href="#">Поиск по сайту</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-basket" href="#">Корзина: пока пуста</a>
+          </li>
         </ul>
         <ul class="menu__list menu__list-new">
-          <li class="menu__item"><a class="menu__link menu__link-new" href="#">Новые поступления</a></li>
-          <li class="menu__item"><a class="menu__link menu__link-new" href="#">Распродажа</a></li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-new" href="#">Новые поступления</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-new" href="#">Распродажа</a>
+          </li>
         </ul>
         <ul class="menu__list menu__list-delivery">
           <li class="menu__item">
@@ -61,13 +75,17 @@
         <a href="catalog.html" class="handwork__interior">
           <div class="handwork__inner handwork__flex-g">
             <p class="handwork__category">Предметы интерьера</p>
-            <img class="handwork__image-itn" src="https://via.placeholder.com/150x150" width="40" height="62" alt="Предметы интерьера">
+            <img class="handwork__image-itn"
+                src="https://via.placeholder.com/150x150" width="40" height="62"
+                alt="Предметы интерьера">
           </div>
         </a>
         <a href="catalog.html" class="handwork__toys">
           <div class="handwork__inner handwork__flex-g">
             <p class="handwork__category">Детские игрушки</p>
-            <img class="handwork__image-toys" src="https://via.placeholder.com/150x150" width="60" height="60" alt="Детские игрушки">
+            <img class="handwork__image-toys"
+                src="https://via.placeholder.com/150x150" width="60" height="60"
+                alt="Детские игрушки">
           </div>
         </a>
       </div>
@@ -83,7 +101,9 @@
           </div>
           <div class="baskets__info">
             <div class="baskets__description">
-              <p class="baskets__about-text">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.</p>
+              <p class="baskets__about-text">
+                Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.
+              </p>
               <table class="baskets__table">
                 <tr class="baskets__desc-table">
                   <td class="baskets__value">
@@ -111,7 +131,12 @@
                 </tr>
               </table>
             </div>
-            <img class="baskets__image" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@1x.jpg 767w, img/triple-set-tablet@1x.jpg 1149w, img/triple-set-desktop@1x.jpg" alt="Вязаные корзинки">
+            <img class="baskets__image"
+                src="img/triple-set-mobile@1x.jpg"
+                srcset="img/triple-set-mobile@1x.jpg 767w,
+                        img/triple-set-tablet@1x.jpg 1149w,
+                        img/triple-set-desktop@1x.jpg"
+                alt="Вязаные корзинки">
             <div class="baskets__order">
               <p class="baskets__price">Цена: 990 руб.</p>
               <button class="baskets__to-order-btn button" type="button">Заказать</button>
@@ -128,27 +153,39 @@
           <h2 class="about-us__title title">Коротко о нас:</h2>
           <ul class="about-us__list">
             <li class="about-us__item">
-              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="32" height="37" alt="Экологически чистые материалы">
+              <img class="about-us__image"
+                  src="https://via.placeholder.com/150x150" width="32" height="37"
+                  alt="Экологически чистые материалы">
               <p class="about-us__text">Экологически чистые материалы</p>
             </li>
             <li class="about-us__item">
-              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="47" height="27" alt="Скандинавский стиль по российской цене">
+              <img class="about-us__image"
+                    src="https://via.placeholder.com/150x150" width="47" height="27"
+                    alt="Скандинавский стиль по российской цене">
               <p class="about-us__text">Скандинавский стиль по российской цене</p>
             </li>
             <li class="about-us__item">
-              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="34" height="27" alt="Увеличивает лайкина фотографиях">
+              <img class="about-us__image"
+                    src="https://via.placeholder.com/150x150" width="34" height="27"
+                    alt="Увеличивает лайкина фотографиях">
               <p class="about-us__text">Увеличивает лайки на фотографиях</p>
             </li>
             <li class="about-us__item">
-              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="35" height="34" alt="Связано вручную с любовью и умилением">
+              <img class="about-us__image"
+                    src="https://via.placeholder.com/150x150" width="35" height="34"
+                    alt="Связано вручную с любовью и умилением">
               <p class="about-us__text">Связано вручную с любовью и умилением</p>
             </li>
             <li class="about-us__item">
-              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="55" height="23" alt="Поддержка отечественного производителя">
+              <img class="about-us__image"
+                    src="https://via.placeholder.com/150x150" width="55" height="23"
+                    alt="Поддержка отечественного производителя">
               <p class="about-us__text">Поддержка отечественного производителя</p>
             </li>
             <li class="about-us__item">
-              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="33" height="32" alt="Поставляется в подарочной упаковке">
+              <img class="about-us__image"
+                    src="https://via.placeholder.com/150x150" width="33" height="32"
+                    alt="Поставляется в подарочной упаковке">
               <p class="about-us__text">Поставляется в подарочной упаковке</p>
             </li>
           </ul>
@@ -163,7 +200,10 @@
           <h2 class="reviews__title title">Отзывы</h2>
           <div class="reviews__slider">
             <p class="reviews__text">
-              Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+              Я молодая мама, но всё равно фотографии не набирали и близко
+              такого количества лайков, как у популярных инстамамочек.
+              В отчаянии, я накупила аксессуаров и игрушек в Мишке,
+              и мои фотографии сразу стали более стильными, а также набирают больше лайков!
             </p>
             <div class="reviews__user">
               <p class="reviews__name">Анастасия Красильникова</p>
@@ -201,8 +241,14 @@
             </div>
           </div>
           <div class="contacts__map">
-            <img class="contacts__image" src="img/map-mobile@1x.jpg" srcset="img/map-mobile@1x.jpg 767w, img/map-tablet@1x.jpg 1149w, img/map-desktop@1x.jpg" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
-            <img class="contacts__pin" src="https://via.placeholder.com/150x150" alt="" width="100" height="67">
+            <img class="contacts__image"
+                  src="img/map-mobile@1x.jpg"
+                  srcset="img/map-mobile@1x.jpg 767w,
+                  img/map-tablet@1x.jpg 1149w,
+                  img/map-desktop@1x.jpg"
+                  alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
+            <img class="contacts__pin" src="https://via.placeholder.com/150x150"
+                  alt="Контакты" width="100" height="67">
           </div>
           <button class="contacts__btn button">Напишите нам</button>
         </div>
@@ -221,15 +267,21 @@
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link-instagram" href="#" aria-label="Инстаграм">
-              <img src="https://via.placeholder.com/150x150" alt="Наш инстаграм" width="22" height="21"></a>
+              <img src="https://via.placeholder.com/150x150"
+                    alt="Наш инстаграм" width="22" height="21">
+            </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link-facebook" href="#" aria-label="Фейсбук">
-              <img src="https://via.placeholder.com/150x150" alt="Наш фейсбук" width="15" height="28"></a>
+              <img src="https://via.placeholder.com/150x150"
+                    alt="Наш фейсбук" width="15" height="28">
+            </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link-twitter" href="#" aria-label="Твитер">
-              <img src="https://via.placeholder.com/150x150" alt="Наш твиттер" width="23" height="20"></a>
+              <img src="https://via.placeholder.com/150x150"
+                    alt="Наш твиттер" width="23" height="20">
+            </a>
           </li>
         </ul>
       </div>
@@ -237,7 +289,9 @@
       <div class="footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="footer__image" src="https://via.placeholder.com/150x150" width="27" height="34" alt="HTML Academy">
+          <img class="footer__image"
+                src="https://via.placeholder.com/150x150" width="27" height="34"
+                alt="HTML Academy">
         </a>
       </div>
     </div>
