--- a/source/catalog.html
+++ b/source/catalog.html
@@ -18,7 +18,12 @@
     <div class="header__inner">
       <nav class="header__menu menu">
         <a class="header__logo logo" href="index.html">
-          <img class="logo__image" src="img/logo-mobile.svg" srcset="img/logo-mobile.svg 767w, img/logo-tablet.svg 1149w, img/logo-desktop.svg" alt="Логотип">
+          <img class="logo__image"
+                src="img/logo-mobile.svg"
+                srcset="img/logo-mobile.svg 767w,
+                        img/logo-tablet.svg 1149w,
+                        img/logo-desktop.svg"
+                alt="Логотип">
         </a>
         <button class="menu__btn" type="button" aria-label="Открыть меню">
           <span class="menu__line"></span>
@@ -26,16 +31,28 @@
           <span class="menu__line"></span>
         </button>
         <ul class="menu__list menu__list-catalog-order">
-          <li class="menu__item"><a class="menu__link menu__link-catalog">Каталог товаров</a></li>
-          <li class="menu__item"><a class="menu__link menu__link-order" href="form.html">Вязание на заказ</a></li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-catalog">Каталог товаров</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-order" href="form.html">Вязание на заказ</a>
+          </li>
         </ul>
         <ul class="menu__list menu__list-search-basket">
-          <li class="menu__item"><a class="menu__link menu__link-search" href="#">Поиск по сайту</a></li>
-          <li class="menu__item"><a class="menu__link menu__link-basket" href="#">Корзина: пока пуста</a></li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-search" href="#">Поиск по сайту</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-basket" href="#">Корзина: пока пуста</a>
+          </li>
         </ul>
         <ul class="menu__list menu__list-new">
-          <li class="menu__item"><a class="menu__link menu__link-new" href="#">Новые поступления</a></li>
-          <li class="menu__item"><a class="menu__link menu__link-new" href="#">Распродажа</a></li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-new" href="#">Новые поступления</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-new" href="#">Распродажа</a>
+          </li>
         </ul>
         <ul class="menu__list menu__list-delivery">
           <li class="menu__item">
@@ -62,7 +79,12 @@
         <ul class="catalog__list">
           <li class="catalog__item">
             <a class="catalog__link" href="#">
-              <img class="catalog__image" src="img/photo-hare-mobile@1x.jpg" srcset="img/photo-hare-mobile@1x.jpg 767w, img/photo-hare-tablet@1x.jpg 1149w, img/photo-hare-desktop@1x.jpg" alt="Зайчик-попрыгайчик">
+              <img class="catalog__image"
+                    src="img/photo-hare-mobile@1x.jpg"
+                    srcset="img/photo-hare-mobile@1x.jpg 767w,
+                            img/photo-hare-tablet@1x.jpg 1149w,
+                            img/photo-hare-desktop@1x.jpg"
+                    alt="Зайчик-попрыгайчик">
                 <div class="catalog__desc">
                   <p class="catalog__title">Зайчик-попрыгайчик</p>
                 <p class="catalog__text">Рост 30 см, вес 200 г</p>
@@ -75,7 +97,12 @@
           </li>
           <li class="catalog__item">
             <a class="catalog__link" href="#">
-              <img class="catalog__image" src="img/photo-bowl-mobile@1x.jpg" srcset="img/photo-bowl-mobile@1x.jpg 767w, img/photo-bowl-tablet@1x.jpg 1149w, img/photo-bowl-desktop@1x.jpg" alt="Корзинка для белья">
+              <img class="catalog__image"
+                    src="img/photo-bowl-mobile@1x.jpg"
+                    srcset="img/photo-bowl-mobile@1x.jpg 767w,
+                            img/photo-bowl-tablet@1x.jpg 1149w,
+                            img/photo-bowl-desktop@1x.jpg"
+                    alt="Корзинка для белья">
                 <div class="catalog__desc">
                   <p class="catalog__title">Корзинка для белья</p>
                 <p class="catalog__text">Диаметр 15 см, высота 10 см</p>
@@ -88,7 +115,12 @@
           </li>
           <li class="catalog__item">
             <a class="catalog__link" href="#">
-              <img class="catalog__image" src="img/photo-toys-mobile@1x.jpg" srcset="img/photo-toys-mobile@1x.jpg 767w, img/photo-toys-tablet@1x.jpg 1149w, img/photo-toys-desktop@1x.jpg" alt="Большая корзина для игрушек">
+              <img class="catalog__image"
+                    src="img/photo-toys-mobile@1x.jpg"
+                    srcset="img/photo-toys-mobile@1x.jpg 767w,
+                            img/photo-toys-tablet@1x.jpg 1149w,
+                            img/photo-toys-desktop@1x.jpg"
+                    alt="Большая корзина для игрушек">
                 <div class="catalog__desc">
                   <p class="catalog__title catalog__title-basket">Большая корзина для игрушек</p>
                 <p class="catalog__text catalog__text-basket">Диаметр 30 см, высота 30 см</p>
@@ -101,11 +133,15 @@
           </li>
           <li class="catalog__item">
             <div class="catalog__process">
-              <img class="catalog__img" src="https://via.placeholder.com/150x150" width="32" height="22" alt="процес производства">
+              <img class="catalog__img" src="https://via.placeholder.com/150x150" width="32" height="22"
+                    alt="процес производства">
               <p class="catalog__title catalog__title-process">Процесс производства</p>
             </div>
-            <img class="catalog__video" src="img/video-mobile@1x.jpg" width="260" height="150" alt="Процесс производства">
-            <p class="catalog__text catalog__text-process">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
+            <img class="catalog__video" src="img/video-mobile@1x.jpg" width="260" height="150"
+                  alt="Процесс производства">
+            <p class="catalog__text catalog__text-process">
+              По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.
+            </p>
             <button class="catalog__btn button" type="button">Сделать заказ</button>
           </li>
         </ul>
@@ -140,7 +176,8 @@
       <div class="footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="footer__image" src="https://via.placeholder.com/150x150" width="27" height="34" alt="HTML Academy">
+          <img class="footer__image"
+                src="https://via.placeholder.com/150x150" width="27" height="34" alt="HTML Academy">
         </a>
       </div>
     </div>
