corrects the name of the country

--- a/source/index.html
+++ b/source/index.html
@@ -53,7 +53,7 @@
         </ul>
         <ul class="menu__list menu__list-delivery">
           <li class="menu__item">
-            <a class="menu__link menu__link-delivery">Бесплатная доставка по Росии</a>
+            <a class="menu__link menu__link-delivery">Бесплатная доставка по России</a>
           </li>
         </ul>
       </nav>
