fix bugs and line break

--- a/source/form.html
+++ b/source/form.html
@@ -18,7 +18,12 @@
     <div class="header__inner">
       <nav class="header__menu menu">
         <a class="header__logo logo" href="index.html">
-          <img class="logo__image" src="img/logo-mobile.svg" srcset="img/logo-mobile.svg 767w, img/logo-tablet.svg 1149w, img/logo-desktop.svg" alt="Логотип">
+          <img class="logo__image"
+               src="img/logo-mobile.svg"
+               srcset="img/logo-mobile.svg 767w,
+                       img/logo-tablet.svg 1149w,
+                       img/logo-desktop.svg"
+               alt="Логотип">
         </a>
         <button class="menu__btn" type="button" aria-label="Открыть меню">
           <span class="menu__line"></span>
@@ -128,8 +133,8 @@
             <legend class="form__legend form__legend-phone">Тел</legend>
             <label>
               <input class="form__placeholder" type="tel"
-                      pattern="2[0-9]{3}-[0-9]{3}"
-                      placeholder="+7 XXX XXX XX XX*" required>
+                     pattern="2[0-9]{3}-[0-9]{3}"
+                     placeholder="+7 XXX XXX XX XX*" required>
             </label>
           </fieldset>
           <fieldset class="form__fieldset">
@@ -142,7 +147,7 @@
             <legend class="form__legend form__legend-additionally">Доп</legend>
             <label>
               <textarea class="form__textarea-text" name="form-text" id="form-text"
-              placeholder="Опишите все ваши пожелания к заказу"></textarea>
+                        placeholder="Опишите все ваши пожелания к заказу"></textarea>
             </label>
           </fieldset>
           <small class="form__require"><sup>*</sup>Поля обязательны для заполнения</small>
@@ -163,15 +168,18 @@
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link-instagram" href="#" aria-label="Инстаграм">
-              <img src="https://via.placeholder.com/150x150" alt="Наш инстаграм" width="22" height="21"></a>
+              <img src="https://via.placeholder.com/150x150"
+                   alt="Наш инстаграм" width="22" height="21"></a>
           </li>
           <li class="social__item">
             <a class="social__link social__link-facebook" href="#" aria-label="Фейсбук">
-              <img src="https://via.placeholder.com/150x150" alt="Наш фейсбук" width="15" height="28"></a>
+              <img src="https://via.placeholder.com/150x150"
+                   alt="Наш фейсбук" width="15" height="28"></a>
           </li>
           <li class="social__item">
             <a class="social__link social__link-twitter" href="#" aria-label="Твитер">
-              <img src="https://via.placeholder.com/150x150" alt="Наш твиттер" width="23" height="20"></a>
+              <img src="https://via.placeholder.com/150x150"
+                   alt="Наш твиттер" width="23" height="20"></a>
           </li>
         </ul>
       </div>
@@ -180,7 +188,7 @@
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <img class="footer__image" src="https://via.placeholder.com/150x150" width="27" height="34"
-                alt="HTML Academy">
+               alt="HTML Academy">
         </a>
       </div>
     </div>
