--- a/source/catalog.html
+++ b/source/catalog.html
@@ -19,11 +19,11 @@
       <nav class="header__menu menu">
         <a class="header__logo logo" href="index.html">
           <img class="logo__image"
-                src="img/logo-mobile.svg"
-                srcset="img/logo-mobile.svg 767w,
-                        img/logo-tablet.svg 1149w,
-                        img/logo-desktop.svg"
-                alt="Логотип">
+               src="img/logo-mobile.svg"
+               srcset="img/logo-mobile.svg 767w,
+                       img/logo-tablet.svg 1149w,
+                       img/logo-desktop.svg"
+               alt="Логотип">
         </a>
         <button class="menu__btn" type="button" aria-label="Открыть меню">
           <span class="menu__line"></span>
@@ -80,11 +80,11 @@
           <li class="catalog__item">
             <a class="catalog__link" href="#">
               <img class="catalog__image"
-                    src="img/photo-hare-mobile@1x.jpg"
-                    srcset="img/photo-hare-mobile@1x.jpg 767w,
-                            img/photo-hare-tablet@1x.jpg 1149w,
-                            img/photo-hare-desktop@1x.jpg"
-                    alt="Зайчик-попрыгайчик">
+                   src="img/photo-hare-mobile@1x.jpg"
+                   srcset="img/photo-hare-mobile@1x.jpg 767w,
+                           img/photo-hare-tablet@1x.jpg 1149w,
+                           img/photo-hare-desktop@1x.jpg"
+                   alt="Зайчик-попрыгайчик">
                 <div class="catalog__desc">
                   <p class="catalog__title">Зайчик-попрыгайчик</p>
                 <p class="catalog__text">Рост 30 см, вес 200 г</p>
@@ -98,11 +98,11 @@
           <li class="catalog__item">
             <a class="catalog__link" href="#">
               <img class="catalog__image"
-                    src="img/photo-bowl-mobile@1x.jpg"
-                    srcset="img/photo-bowl-mobile@1x.jpg 767w,
-                            img/photo-bowl-tablet@1x.jpg 1149w,
-                            img/photo-bowl-desktop@1x.jpg"
-                    alt="Корзинка для белья">
+                   src="img/photo-bowl-mobile@1x.jpg"
+                   srcset="img/photo-bowl-mobile@1x.jpg 767w,
+                           img/photo-bowl-tablet@1x.jpg 1149w,
+                           img/photo-bowl-desktop@1x.jpg"
+                   alt="Корзинка для белья">
                 <div class="catalog__desc">
                   <p class="catalog__title">Корзинка для белья</p>
                 <p class="catalog__text">Диаметр 15 см, высота 10 см</p>
@@ -116,11 +116,11 @@
           <li class="catalog__item">
             <a class="catalog__link" href="#">
               <img class="catalog__image"
-                    src="img/photo-toys-mobile@1x.jpg"
-                    srcset="img/photo-toys-mobile@1x.jpg 767w,
-                            img/photo-toys-tablet@1x.jpg 1149w,
-                            img/photo-toys-desktop@1x.jpg"
-                    alt="Большая корзина для игрушек">
+                   src="img/photo-toys-mobile@1x.jpg"
+                   srcset="img/photo-toys-mobile@1x.jpg 767w,
+                           img/photo-toys-tablet@1x.jpg 1149w,
+                           img/photo-toys-desktop@1x.jpg"
+                   alt="Большая корзина для игрушек">
                 <div class="catalog__desc">
                   <p class="catalog__title catalog__title-basket">Большая корзина для игрушек</p>
                 <p class="catalog__text catalog__text-basket">Диаметр 30 см, высота 30 см</p>
@@ -134,11 +134,11 @@
           <li class="catalog__item">
             <div class="catalog__process">
               <img class="catalog__img" src="https://via.placeholder.com/150x150" width="32" height="22"
-                    alt="процес производства">
+                   alt="процес производства">
               <p class="catalog__title catalog__title-process">Процесс производства</p>
             </div>
             <img class="catalog__video" src="img/video-mobile@1x.jpg" width="260" height="150"
-                  alt="Процесс производства">
+                 alt="Процесс производства">
             <p class="catalog__text catalog__text-process">
               По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.
             </p>
@@ -177,7 +177,8 @@
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <img class="footer__image"
-                src="https://via.placeholder.com/150x150" width="27" height="34" alt="HTML Academy">
+               src="https://via.placeholder.com/150x150" width="27" height="34"
+               alt="HTML Academy">
         </a>
       </div>
     </div>
