:heavy_check_mark: Сборка #12

--- a/12/catalog.html
+++ b/12/catalog.html
@@ -27,20 +27,32 @@
           <span class="menu__line"></span>
         </button>
         <ul class="menu__list menu__list-catalog-order">
-          <li class="menu__item"><a class="menu__link menu__link-catalog">Каталог товаров</a></li>
-          <li class="menu__item"><a class="menu__link menu__link-order" href="form.html">Вязание на заказ</a></li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-catalog">Каталог товаров</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-order" href="form.html">Вязание на заказ</a>
+          </li>
         </ul>
         <ul class="menu__list menu__list-search-basket">
-          <li class="menu__item"><a class="menu__link menu__link-search" href="#">Поиск по сайту</a></li>
-          <li class="menu__item"><a class="menu__link menu__link-basket" href="#">Корзина: пока пуста</a></li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-search" href="#">Поиск по сайту</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-basket" href="#">Корзина: пока пуста</a>
+          </li>
         </ul>
         <ul class="menu__list menu__list-new">
-          <li class="menu__item"><a class="menu__link menu__link-new" href="#">Новые поступления</a></li>
-          <li class="menu__item"><a class="menu__link menu__link-new" href="#">Распродажа</a></li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-new" href="#">Новые поступления</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-new" href="#">Распродажа</a>
+          </li>
         </ul>
         <ul class="menu__list menu__list-delivery">
           <li class="menu__item">
-            <a class="menu__link menu__link-delivery">Бесплатная доставка по Росии</a>
+            <a class="menu__link menu__link-delivery">Бесплатная доставка по России</a>
           </li>
         </ul>
       </nav>
@@ -106,7 +118,9 @@
               <p class="catalog__title catalog__title-process">Процесс производства</p>
             </div>
             <img class="catalog__video" src="img/video-mobile@1x.jpg" width="260" height="150" alt="Процесс производства">
-            <p class="catalog__text catalog__text-process">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
+            <p class="catalog__text catalog__text-process">
+              По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.
+            </p>
             <button class="catalog__btn button" type="button">Сделать заказ</button>
           </li>
         </ul>
