--- a/12/form.html
+++ b/12/form.html
@@ -19,7 +19,7 @@
     <div class="header__inner">
       <nav class="header__menu menu">
         <a class="header__logo logo" href="index.html">
-          <img class="logo__image" src="img/logo-mobile.svg" srcset="img/logo-mobile.svg 767w, img/logo-tablet.svg 1149w, img/logo-desktop.svg" alt="Логотип">
+          <img class="logo__image" src="img/logo-mobile.svg" srcset="img/logo-mobile.svg 767w,img/logo-tablet.svg 1149w,img/logo-desktop.svg" alt="Логотип">
         </a>
         <button class="menu__btn" type="button" aria-label="Открыть меню">
           <span class="menu__line"></span>
@@ -27,20 +27,31 @@
           <span class="menu__line"></span>
         </button>
         <ul class="menu__list menu__list-catalog-order">
-          <li class="menu__item"><a class="menu__link menu__link-catalog" href="catalog.html">Каталог товаров</a></li>
-          <li class="menu__item"><a class="menu__link menu__link-order">Вязание на заказ</a></li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-catalog" href="catalog.html">Каталог товаров</a></li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-order">Вязание на заказ</a>
+          </li>
         </ul>
         <ul class="menu__list menu__list-search-basket">
-          <li class="menu__item"><a class="menu__link menu__link-search" href="#">Поиск по сайту</a></li>
-          <li class="menu__item"><a class="menu__link menu__link-basket" href="#">Корзина: пока пуста</a></li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-search" href="#">Поиск по сайту</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-basket" href="#">Корзина: пока пуста</a>
+          </li>
         </ul>
         <ul class="menu__list menu__list-new">
-          <li class="menu__item"><a class="menu__link menu__link-new" href="#">Новые поступления</a></li>
-          <li class="menu__item"><a class="menu__link menu__link-new" href="#">Распродажа</a></li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-new" href="#">Новые поступления</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-new" href="#">Распродажа</a>
+          </li>
         </ul>
         <ul class="menu__list menu__list-delivery">
           <li class="menu__item">
-            <a class="menu__link menu__link-delivery">Бесплатная доставка по Росии</a>
+            <a class="menu__link menu__link-delivery">Бесплатная доставка по России</a>
           </li>
         </ul>
       </nav>
@@ -61,7 +72,8 @@
     <section class="form">
       <div class="form__inner">
         <p class="form__text">
-          Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
+          Мы будем рады воплотить в жизнь ваши пожелания!
+          Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
         </p>
         <form action="https://echo.htmlacademy.ru">
           <fieldset class="form__fieldset">
@@ -69,7 +81,9 @@
             <div class="form__radio">
               <div class="form__interior">
                 <input class="visually-hidden" id="interior" type="radio" name="type" value="interior" checked>
-                <label class="form__style-text form__text-indentation" for="interior">Аксессуар для интерьера</label>
+                <label class="form__style-text form__text-indentation" for="interior">
+                  Аксессуар для интерьера
+                </label>
               </div>
               <div class="form__games">
                 <input class="visually-hidden" id="games" type="radio" name="type" value="games">
@@ -101,21 +115,33 @@
           </fieldset>
           <fieldset class="form__fieldset">
             <legend class="form__legend form__legend-name">Фио</legend>
-            <label class="form__style-text form__text-mb">Имя:<input class="form__placeholder" type="text" placeholder="Введите ваше имя*"></label>
-            <label class="form__style-text form__text-mb">Фамилия:<input class="form__placeholder" type="text" placeholder="Укажите фамилию*"></label>
-            <label class="form__style-text form__text-mb">Отчество:<input class="form__placeholder" type="text" placeholder="Отчество, если желаете"></label>
+            <label class="form__style-text form__text-mb">Имя:
+              <input class="form__placeholder" type="text" placeholder="Введите ваше имя*">
+            </label>
+            <label class="form__style-text form__text-mb">Фамилия:
+              <input class="form__placeholder" type="text" placeholder="Укажите фамилию*">
+            </label>
+            <label class="form__style-text form__text-mb">Отчество:
+              <input class="form__placeholder" type="text" placeholder="Отчество, если желаете">
+            </label>
           </fieldset>
           <fieldset class="form__fieldset">
             <legend class="form__legend form__legend-phone">Тел</legend>
-            <label><input class="form__placeholder" type="tel" pattern="2[0-9]{3}-[0-9]{3}" placeholder="+7 XXX XXX XX XX*" required></label>
+            <label>
+              <input class="form__placeholder" type="tel" pattern="2[0-9]{3}-[0-9]{3}" placeholder="+7 XXX XXX XX XX*" required>
+            </label>
           </fieldset>
           <fieldset class="form__fieldset">
             <legend class="form__legend form__legend-email">E-mail</legend>
-            <label><input class="form__placeholder" type="email" placeholder="Ваш Email*" required></label>
+            <label>
+              <input class="form__placeholder" type="email" placeholder="Ваш Email*" required>
+            </label>
           </fieldset>
           <fieldset class="form__fieldset">
             <legend class="form__legend form__legend-additionally">Доп</legend>
-            <label><textarea class="form__textarea-text" name="form-text" id="form-text" placeholder="Опишите все ваши пожелания к заказу"></textarea></label>
+            <label>
+              <textarea class="form__textarea-text" name="form-text" id="form-text" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+            </label>
           </fieldset>
           <small class="form__require"><sup>*</sup>Поля обязательны для заполнения</small>
           <button class="form__btn button" type="submit">Отправить заказ</button>
