--- a/12/index.html
+++ b/12/index.html
@@ -19,7 +19,7 @@
     <div class="header__inner">
       <nav class="header__menu menu">
         <a class="header__logo logo">
-          <img class="logo__image" src="img/logo-mobile.svg" srcset="img/logo-mobile.svg 767w, img/logo-tablet.svg 1149w, img/logo-desktop.svg" alt="Логотип">
+          <img class="logo__image" src="img/logo-mobile.svg" srcset="img/logo-mobile.svg 767w,img/logo-tablet.svg 1149w,img/logo-desktop.svg" alt="Логотип">
         </a>
         <button class="menu__btn" type="button" aria-label="Открыть меню">
           <span class="menu__line"></span>
@@ -27,20 +27,32 @@
           <span class="menu__line"></span>
         </button>
         <ul class="menu__list menu__list-catalog-order">
-          <li class="menu__item"><a class="menu__link menu__link-catalog" href="catalog.html">Каталог товаров</a></li>
-          <li class="menu__item"><a class="menu__link menu__link-order" href="form.html">Вязание на заказ</a></li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-catalog" href="catalog.html">Каталог товаров</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-order" href="form.html">Вязание на заказ</a>
+          </li>
         </ul>
         <ul class="menu__list menu__list-search-basket">
-          <li class="menu__item"><a class="menu__link menu__link-search" href="#">Поиск по сайту</a></li>
-          <li class="menu__item"><a class="menu__link menu__link-basket" href="#">Корзина: пока пуста</a></li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-search" href="#">Поиск по сайту</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-basket" href="#">Корзина: пока пуста</a>
+          </li>
         </ul>
         <ul class="menu__list menu__list-new">
-          <li class="menu__item"><a class="menu__link menu__link-new" href="#">Новые поступления</a></li>
-          <li class="menu__item"><a class="menu__link menu__link-new" href="#">Распродажа</a></li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-new" href="#">Новые поступления</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link menu__link-new" href="#">Распродажа</a>
+          </li>
         </ul>
         <ul class="menu__list menu__list-delivery">
           <li class="menu__item">
-            <a class="menu__link menu__link-delivery">Бесплатная доставка по Росии</a>
+            <a class="menu__link menu__link-delivery">Бесплатная доставка по России</a>
           </li>
         </ul>
       </nav>
@@ -84,7 +96,9 @@
           </div>
           <div class="baskets__info">
             <div class="baskets__description">
-              <p class="baskets__about-text">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.</p>
+              <p class="baskets__about-text">
+                Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.
+              </p>
               <table class="baskets__table">
                 <tr class="baskets__desc-table">
                   <td class="baskets__value">
@@ -157,14 +171,17 @@
       </div>
     </section>
 
-<!-- Секция отзывов -->
+<!-- Секция отзывов --
     <section class="reviews">
       <div class="reviews__inner">
         <div class="reviews__wrapper">
           <h2 class="reviews__title title">Отзывы</h2>
           <div class="reviews__slider">
             <p class="reviews__text">
-              Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+              Я молодая мама, но всё равно фотографии не набирали и близко
+              такого количества лайков, как у популярных инстамамочек.
+              В отчаянии, я накупила аксессуаров и игрушек в Мишке,
+              и мои фотографии сразу стали более стильными, а также набирают больше лайков!
             </p>
             <div class="reviews__user">
               <p class="reviews__name">Анастасия Красильникова</p>
@@ -203,7 +220,7 @@
           </div>
           <div class="contacts__map">
             <img class="contacts__image" src="img/map-mobile@1x.jpg" srcset="img/map-mobile@1x.jpg 767w, img/map-tablet@1x.jpg 1149w, img/map-desktop@1x.jpg" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
-            <img class="contacts__pin" src="https://via.placeholder.com/150x150" alt="" width="100" height="67">
+            <img class="contacts__pin" src="https://via.placeholder.com/150x150" alt="Контакты" width="100" height="67">
           </div>
           <button class="contacts__btn button">Напишите нам</button>
         </div>
@@ -222,15 +239,18 @@
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link-instagram" href="#" aria-label="Инстаграм">
-              <img src="https://via.placeholder.com/150x150" alt="Наш инстаграм" width="22" height="21"></a>
+              <img src="https://via.placeholder.com/150x150" alt="Наш инстаграм" width="22" height="21">
+            </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link-facebook" href="#" aria-label="Фейсбук">
-              <img src="https://via.placeholder.com/150x150" alt="Наш фейсбук" width="15" height="28"></a>
+              <img src="https://via.placeholder.com/150x150" alt="Наш фейсбук" width="15" height="28">
+            </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link-twitter" href="#" aria-label="Твитер">
-              <img src="https://via.placeholder.com/150x150" alt="Наш твиттер" width="23" height="20"></a>
+              <img src="https://via.placeholder.com/150x150" alt="Наш твиттер" width="23" height="20">
+            </a>
           </li>
         </ul>
       </div>
