adds line wrapping

--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,8 @@
     <div class="header__inner">
       <nav class="header__menu menu">
         <a class="header__logo logo">
-          <img class="logo__image" src="img/logo-mobile.svg" srcset="img/logo-mobile.svg 767w,img/logo-tablet.svg 1149w,img/logo-desktop.svg" alt="Логотип">
+          <img class="logo__image" src="img/logo-mobile.svg"
+                srcset="img/logo-mobile.svg 767w,img/logo-tablet.svg 1149w,img/logo-desktop.svg" alt="Логотип">
         </a>
         <button class="menu__btn" type="button" aria-label="Открыть меню">
           <span class="menu__line"></span>
@@ -73,13 +74,15 @@
         <a href="catalog.html" class="handwork__interior">
           <div class="handwork__inner handwork__flex-g">
             <p class="handwork__category">Предметы интерьера</p>
-            <img class="handwork__image-itn" src="https://via.placeholder.com/150x150" width="40" height="62" alt="Предметы интерьера">
+            <img class="handwork__image-itn" src="https://via.placeholder.com/150x150"
+                  width="40" height="62" alt="Предметы интерьера">
           </div>
         </a>
         <a href="catalog.html" class="handwork__toys">
           <div class="handwork__inner handwork__flex-g">
             <p class="handwork__category">Детские игрушки</p>
-            <img class="handwork__image-toys" src="https://via.placeholder.com/150x150" width="60" height="60" alt="Детские игрушки">
+            <img class="handwork__image-toys" src="https://via.placeholder.com/150x150"
+                  width="60" height="60" alt="Детские игрушки">
           </div>
         </a>
       </div>
@@ -125,7 +128,9 @@
                 </tr>
               </table>
             </div>
-            <img class="baskets__image" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@1x.jpg 767w, img/triple-set-tablet@1x.jpg 1149w, img/triple-set-desktop@1x.jpg" alt="Вязаные корзинки">
+            <img class="baskets__image" src="img/triple-set-mobile@1x.jpg"
+                  srcset="img/triple-set-mobile@1x.jpg 767w, img/triple-set-tablet@1x.jpg 1149w, img/triple-set-desktop@1x.jpg"
+                  alt="Вязаные корзинки">
             <div class="baskets__order">
               <p class="baskets__price">Цена: 990 руб.</p>
               <button class="baskets__to-order-btn button" type="button">Заказать</button>
@@ -142,27 +147,33 @@
           <h2 class="about-us__title title">Коротко о нас:</h2>
           <ul class="about-us__list">
             <li class="about-us__item">
-              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="32" height="37" alt="Экологически чистые материалы">
+              <img class="about-us__image" src="https://via.placeholder.com/150x150"
+                    width="32" height="37" alt="Экологически чистые материалы">
               <p class="about-us__text">Экологически чистые материалы</p>
             </li>
             <li class="about-us__item">
-              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="47" height="27" alt="Скандинавский стиль по российской цене">
+              <img class="about-us__image" src="https://via.placeholder.com/150x150"
+                    width="47" height="27" alt="Скандинавский стиль по российской цене">
               <p class="about-us__text">Скандинавский стиль по российской цене</p>
             </li>
             <li class="about-us__item">
-              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="34" height="27" alt="Увеличивает лайкина фотографиях">
+              <img class="about-us__image" src="https://via.placeholder.com/150x150"
+                    width="34" height="27" alt="Увеличивает лайкина фотографиях">
               <p class="about-us__text">Увеличивает лайки на фотографиях</p>
             </li>
             <li class="about-us__item">
-              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="35" height="34" alt="Связано вручную с любовью и умилением">
+              <img class="about-us__image" src="https://via.placeholder.com/150x150"
+                    width="35" height="34" alt="Связано вручную с любовью и умилением">
               <p class="about-us__text">Связано вручную с любовью и умилением</p>
             </li>
             <li class="about-us__item">
-              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="55" height="23" alt="Поддержка отечественного производителя">
+              <img class="about-us__image" src="https://via.placeholder.com/150x150"
+                    width="55" height="23" alt="Поддержка отечественного производителя">
               <p class="about-us__text">Поддержка отечественного производителя</p>
             </li>
             <li class="about-us__item">
-              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="33" height="32" alt="Поставляется в подарочной упаковке">
+              <img class="about-us__image" src="https://via.placeholder.com/150x150"
+                    width="33" height="32" alt="Поставляется в подарочной упаковке">
               <p class="about-us__text">Поставляется в подарочной упаковке</p>
             </li>
           </ul>
@@ -170,7 +181,7 @@
       </div>
     </section>
 
-<!-- Секция отзывов --
+<!-- Секция отзывов -->
     <section class="reviews">
       <div class="reviews__inner">
         <div class="reviews__wrapper">
@@ -218,8 +229,11 @@
             </div>
           </div>
           <div class="contacts__map">
-            <img class="contacts__image" src="img/map-mobile@1x.jpg" srcset="img/map-mobile@1x.jpg 767w, img/map-tablet@1x.jpg 1149w, img/map-desktop@1x.jpg" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
-            <img class="contacts__pin" src="https://via.placeholder.com/150x150" alt="Контакты" width="100" height="67">
+            <img class="contacts__image" src="img/map-mobile@1x.jpg"
+                  srcset="img/map-mobile@1x.jpg 767w, img/map-tablet@1x.jpg 1149w, img/map-desktop@1x.jpg"
+                  alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
+            <img class="contacts__pin" src="https://via.placeholder.com/150x150" alt="Контакты"
+                  width="100" height="67">
           </div>
           <button class="contacts__btn button">Напишите нам</button>
         </div>
@@ -257,7 +271,8 @@
       <div class="footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="footer__image" src="https://via.placeholder.com/150x150" width="27" height="34" alt="HTML Academy">
+          <img class="footer__image" src="https://via.placeholder.com/150x150"
+                width="27" height="34" alt="HTML Academy">
         </a>
       </div>
     </div>
