--- a/source/catalog.html
+++ b/source/catalog.html
@@ -18,7 +18,9 @@
     <div class="header__inner">
       <nav class="header__menu menu">
         <a class="header__logo logo" href="index.html">
-          <img class="logo__image" src="img/logo-mobile.svg" srcset="img/logo-mobile.svg 767w, img/logo-tablet.svg 1149w, img/logo-desktop.svg" alt="Логотип">
+          <img class="logo__image" src="img/logo-mobile.svg"
+                srcset="img/logo-mobile.svg 767w, img/logo-tablet.svg 1149w, img/logo-desktop.svg"
+                alt="Логотип">
         </a>
         <button class="menu__btn" type="button" aria-label="Открыть меню">
           <span class="menu__line"></span>
@@ -74,13 +76,17 @@
         <ul class="catalog__list">
           <li class="catalog__item">
             <a class="catalog__link" href="#">
-              <img class="catalog__image" src="img/photo-hare-mobile@1x.jpg" srcset="img/photo-hare-mobile@1x.jpg 767w, img/photo-hare-tablet@1x.jpg 1149w, img/photo-hare-desktop@1x.jpg" alt="Зайчик-попрыгайчик">
+              <img class="catalog__image"
+                    src="img/photo-hare-mobile@1x.jpg"
+                    srcset="img/photo-hare-mobile@1x.jpg 767w, img/photo-hare-tablet@1x.jpg 1149w, img/photo-hare-desktop@1x.jpg"
+                    alt="Зайчик-попрыгайчик">
                 <div class="catalog__desc">
                   <p class="catalog__title">Зайчик-попрыгайчик</p>
                 <p class="catalog__text">Рост 30 см, вес 200 г</p>
                 <div class="catalog__price">
                   <p class="catalog__money">1200 руб.</p>
-                  <img src="https://via.placeholder.com/150x150" width="20" height="19" alt="Иконка корзины">
+                  <img src="https://via.placeholder.com/150x150"
+                        width="20" height="19" alt="Иконка корзины">
                 </div>
               </div>
             </a>
@@ -93,32 +99,41 @@
                 <p class="catalog__text">Диаметр 15 см, высота 10 см</p>
                 <div class="catalog__price">
                   <p class="catalog__money">690 руб.</p>
-                  <img src="https://via.placeholder.com/150x150" width="20" height="19" alt="Иконка корзины">
+                  <img src="https://via.placeholder.com/150x150"
+                        width="20" height="19" alt="Иконка корзины">
                 </div>
               </div>
             </a>
           </li>
           <li class="catalog__item">
             <a class="catalog__link" href="#">
-              <img class="catalog__image" src="img/photo-toys-mobile@1x.jpg" srcset="img/photo-toys-mobile@1x.jpg 767w, img/photo-toys-tablet@1x.jpg 1149w, img/photo-toys-desktop@1x.jpg" alt="Большая корзина для игрушек">
+              <img class="catalog__image" src="img/photo-toys-mobile@1x.jpg"
+                    srcset="img/photo-toys-mobile@1x.jpg 767w, img/photo-toys-tablet@1x.jpg 1149w, img/photo-toys-desktop@1x.jpg"
+                    alt="Большая корзина для игрушек">
                 <div class="catalog__desc">
                   <p class="catalog__title catalog__title-basket">Большая корзина для игрушек</p>
                 <p class="catalog__text catalog__text-basket">Диаметр 30 см, высота 30 см</p>
                 <div class="catalog__price">
                   <p class="catalog__money">1500 руб.</p>
-                  <img src="https://via.placeholder.com/150x150" width="20" height="19" alt="Иконка корзины">
+                  <img src="https://via.placeholder.com/150x150" width="20" height="19"
+                        alt="Иконка корзины">
                 </div>
               </div>
             </a>
           </li>
           <li class="catalog__item">
             <div class="catalog__process">
-              <img class="catalog__img" src="https://via.placeholder.com/150x150" width="32" height="22" alt="процес производства">
+              <img class="catalog__img" src="https://via.placeholder.com/150x150"
+                    width="32" height="22"
+                    alt="процес производства">
               <p class="catalog__title catalog__title-process">Процесс производства</p>
             </div>
-            <img class="catalog__video" src="img/video-mobile@1x.jpg" width="260" height="150" alt="Процесс производства">
+            <img class="catalog__video" src="img/video-mobile@1x.jpg"
+                  width="260" height="150"
+                  alt="Процесс производства">
             <p class="catalog__text catalog__text-process">
-              По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.
+              По просьбам наших любимых фолловеров мы сняли
+              для вас подробное видео о том, как появляются наши товары.
             </p>
             <button class="catalog__btn button" type="button">Сделать заказ</button>
           </li>
@@ -138,15 +153,18 @@
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link-instagram" href="#" aria-label="Инстаграм">
-              <img src="https://via.placeholder.com/150x150" alt="Наш инстаграм" width="22" height="21"></a>
+              <img src="https://via.placeholder.com/150x150"
+                    alt="Наш инстаграм" width="22" height="21"></a>
           </li>
           <li class="social__item">
             <a class="social__link social__link-facebook" href="#" aria-label="Фейсбук">
-              <img src="https://via.placeholder.com/150x150" alt="Наш фейсбук" width="15" height="28"></a>
+              <img src="https://via.placeholder.com/150x150"
+                    alt="Наш фейсбук" width="15" height="28"></a>
           </li>
           <li class="social__item">
             <a class="social__link social__link-twitter" href="#" aria-label="Твитер">
-              <img src="https://via.placeholder.com/150x150" alt="Наш твиттер" width="23" height="20"></a>
+              <img src="https://via.placeholder.com/150x150"
+                    alt="Наш твиттер" width="23" height="20"></a>
           </li>
         </ul>
       </div>
@@ -154,7 +172,8 @@
       <div class="footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="footer__image" src="https://via.placeholder.com/150x150" width="27" height="34" alt="HTML Academy">
+          <img class="footer__image" src="https://via.placeholder.com/150x150"
+                width="27" height="34" alt="HTML Academy">
         </a>
       </div>
     </div>
@@ -167,11 +186,14 @@
       <fieldset class="modal__fieldset">
         <legend class="modal__legend">Выберите размер:</legend>
         <div class="modal__sizes">
-          <input class="modal__input visually-hidden" value="size-s" id="size-s" type="radio" name="size" checked>
+          <input class="modal__input visually-hidden"
+                  value="size-s" id="size-s" type="radio" name="size" checked>
           <label class="modal__size" for="size-s">S</label>
-          <input class="modal__input visually-hidden" value="size-m" id="size-m" type="radio" name="size">
+          <input class="modal__input visually-hidden"
+                  value="size-m" id="size-m" type="radio" name="size">
           <label class="modal__size" for="size-m">M</label>
-          <input class="modal__input visually-hidden" value="size-l" id="size-l" type="radio" name="size">
+          <input class="modal__input visually-hidden"
+                  value="size-l" id="size-l" type="radio" name="size">
           <label class="modal__size" for="size-l">L</label>
         </div>
       </fieldset>
