--- a/source/form.html
+++ b/source/form.html
@@ -18,7 +18,9 @@
     <div class="header__inner">
       <nav class="header__menu menu">
         <a class="header__logo logo" href="index.html">
-          <img class="logo__image" src="img/logo-mobile.svg" srcset="img/logo-mobile.svg 767w,img/logo-tablet.svg 1149w,img/logo-desktop.svg" alt="Логотип">
+          <img class="logo__image" src="img/logo-mobile.svg"
+                srcset="img/logo-mobile.svg 767w,img/logo-tablet.svg 1149w,img/logo-desktop.svg"
+                alt="Логотип">
         </a>
         <button class="menu__btn" type="button" aria-label="Открыть меню">
           <span class="menu__line"></span>
@@ -27,7 +29,8 @@
         </button>
         <ul class="menu__list menu__list-catalog-order">
           <li class="menu__item">
-            <a class="menu__link menu__link-catalog" href="catalog.html">Каталог товаров</a></li>
+            <a class="menu__link menu__link-catalog" href="catalog.html">Каталог товаров</a>
+          </li>
           <li class="menu__item">
             <a class="menu__link menu__link-order">Вязание на заказ</a>
           </li>
@@ -79,13 +82,15 @@
             <legend class="form__legend form__legend-type">Тип</legend>
             <div class="form__radio">
               <div class="form__interior">
-                <input class="visually-hidden" id="interior" type="radio" name="type" value="interior" checked>
+                <input class="visually-hidden" id="interior"
+                        type="radio" name="type" value="interior" checked>
                 <label class="form__style-text form__text-indentation" for="interior">
                   Аксессуар для интерьера
                 </label>
               </div>
               <div class="form__games">
-                <input class="visually-hidden" id="games" type="radio" name="type" value="games">
+                <input class="visually-hidden" id="games"
+                        type="radio" name="type" value="games">
                 <label class="form__style-text form__text-indentation" for="games">Детская игрушка</label>
               </div>
             </div>
@@ -94,34 +99,43 @@
             <legend class="form__legend form__legend-color">Цвет
             </legend>
             <label class="form__style-text form__text-indentation">
-              <input class="visually-hidden" name="color" value="white" type="checkbox" checked>Белый
+              <input class="visually-hidden" name="color" value="white"
+                      type="checkbox" checked>Белый
             </label>
             <label class="form__style-text form__text-indentation">
-              <input class="visually-hidden" name="color" value="grey" type="checkbox" checked>Серый
+              <input class="visually-hidden" name="color" value="grey"
+                      type="checkbox" checked>Серый
             </label>
             <label class="form__style-text form__text-indentation">
-              <input class="visually-hidden" name="color" value="tiffany" type="checkbox">«Тиффани»
+              <input class="visually-hidden" name="color" value="tiffany"
+                      type="checkbox">«Тиффани»
             </label>
             <label class="form__style-text form__text-indentation">
-              <input class="visually-hidden" name="color" value="black" type="checkbox">Черный
+              <input class="visually-hidden" name="color" value="black"
+                      type="checkbox">Черный
             </label>
             <label class="form__style-text form__text-indentation">
-              <input class="visually-hidden" name="color" value="pink" type="checkbox">Розовый
+              <input class="visually-hidden" name="color" value="pink"
+                      type="checkbox">Розовый
             </label>
             <label class="form__style-text form__text-indentation">
-              <input class="visually-hidden" name="color" value="orange" type="checkbox">Оранжевый
+              <input class="visually-hidden" name="color" value="orange"
+                      type="checkbox">Оранжевый
             </label>
           </fieldset>
           <fieldset class="form__fieldset">
             <legend class="form__legend form__legend-name">Фио</legend>
             <label class="form__style-text form__text-mb">Имя:
-              <input class="form__placeholder" type="text" placeholder="Введите ваше имя*">
+              <input class="form__placeholder" type="text"
+                      placeholder="Введите ваше имя*">
             </label>
             <label class="form__style-text form__text-mb">Фамилия:
-              <input class="form__placeholder" type="text" placeholder="Укажите фамилию*">
+              <input class="form__placeholder" type="text"
+                      placeholder="Укажите фамилию*">
             </label>
             <label class="form__style-text form__text-mb">Отчество:
-              <input class="form__placeholder" type="text" placeholder="Отчество, если желаете">
+              <input class="form__placeholder" type="text"
+                      placeholder="Отчество, если желаете">
             </label>
           </fieldset>
           <fieldset class="form__fieldset">
@@ -160,15 +174,18 @@
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link-instagram" href="#" aria-label="Инстаграм">
-              <img src="https://via.placeholder.com/150x150" alt="Наш инстаграм" width="22" height="21"></a>
+              <img src="https://via.placeholder.com/150x150"
+                    alt="Наш инстаграм" width="22" height="21"></a>
           </li>
           <li class="social__item">
             <a class="social__link social__link-facebook" href="#" aria-label="Фейсбук">
-              <img src="https://via.placeholder.com/150x150" alt="Наш фейсбук" width="15" height="28"></a>
+              <img src="https://via.placeholder.com/150x150"
+                    alt="Наш фейсбук" width="15" height="28"></a>
           </li>
           <li class="social__item">
             <a class="social__link social__link-twitter" href="#" aria-label="Твитер">
-              <img src="https://via.placeholder.com/150x150" alt="Наш твиттер" width="23" height="20"></a>
+              <img src="https://via.placeholder.com/150x150"
+                    alt="Наш твиттер" width="23" height="20"></a>
           </li>
         </ul>
       </div>
@@ -176,7 +193,10 @@
       <div class="footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="footer__image" src="https://via.placeholder.com/150x150" width="27" height="34" alt="HTML Academy">
+          <img class="footer__image"
+                src="https://via.placeholder.com/150x150"
+                width="27" height="34"
+                alt="HTML Academy">
         </a>
       </div>
     </div>
