fix pseudoline in form

--- a/source/form.html
+++ b/source/form.html
@@ -79,7 +79,7 @@
         </p>
         <form action="https://echo.htmlacademy.ru">
           <fieldset class="form__fieldset">
-            <legend class="form__legend form__legend-type">Тип</legend>
+            <legend class="form__legend form__legend-line">Тип</legend>
             <div class="form__radio">
               <div class="form__interior">
                 <input class="visually-hidden" id="interior"
@@ -96,7 +96,7 @@
             </div>
           </fieldset>
           <fieldset class="form__fieldset">
-            <legend class="form__legend form__legend-color">Цвет</legend>
+            <legend class="form__legend form__legend-line">Цвет</legend>
             <input class="visually-hidden" id="white" name="color" value="white" type="checkbox" checked>
             <label class="form__style-text form__text-indentation" for="white">Белый</label>
             <input class="visually-hidden" id="gray" name="color" value="grey" type="checkbox" checked>
@@ -111,7 +111,7 @@
             <label class="form__style-text form__text-indentation" for="orange">Оранжевый</label>
           </fieldset>
           <fieldset class="form__fieldset">
-            <legend class="form__legend form__legend-name">Фио</legend>
+            <legend class="form__legend form__legend-line">Фио</legend>
             <label class="form__style-text form__text-mb" for="first-name">Имя:</label>
             <input class="form__placeholder" id="first-name" type="text" placeholder="Введите ваше имя*">
             <label class="form__style-text form__text-mb" for="last-name">Фамилия:</label>
@@ -120,18 +120,18 @@
             <input class="form__placeholder" id="father-name" type="text" placeholder="Отчество, если желаете">
           </fieldset>
           <fieldset class="form__fieldset">
-            <legend class="form__legend form__legend-phone">Тел</legend>
+            <legend class="form__legend form__legend-line">Тел</legend>
             <label for="number-phone"></label>
             <input class="form__placeholder" id="number-phone" type="tel" pattern="2[0-9]{3}-[0-9]{3}"
                     placeholder="+7 XXX XXX XX XX*" required>
           </fieldset>
           <fieldset class="form__fieldset">
-            <legend class="form__legend form__legend-email">E-mail</legend>
+            <legend class="form__legend form__legend-line">Email</legend>
             <label for="email"></label>
             <input class="form__placeholder" id="email" type="email" placeholder="Ваш Email*" required>
           </fieldset>
           <fieldset class="form__fieldset">
-            <legend class="form__legend form__legend-additionally">Доп</legend>
+            <legend class="form__legend form__legend-line">Доп</legend>
             <label>
               <textarea class="form__textarea-text" name="form-text" id="form-text"
                           placeholder="Опишите все ваши пожелания к заказу"></textarea>
