fix margin in placeholder

--- a/source/form.html
+++ b/source/form.html
@@ -113,11 +113,14 @@
           <fieldset class="form__fieldset">
             <legend class="form__legend form__legend-line">Фио</legend>
             <label class="form__style-text form__text-mb" for="first-name">Имя:</label>
-            <input class="form__placeholder" id="first-name" type="text" placeholder="Введите ваше имя*">
+            <input class="form__placeholder form__placeholder-mb"
+                    id="first-name" type="text" placeholder="Введите ваше имя*">
             <label class="form__style-text form__text-mb" for="last-name">Фамилия:</label>
-            <input class="form__placeholder" id="last-name" type="text" placeholder="Укажите фамилию*">
+            <input class="form__placeholder form__placeholder-mb"
+                    id="last-name" type="text" placeholder="Укажите фамилию*">
             <label class="form__style-text form__text-mb" for="father-name">Отчество:</label>
-            <input class="form__placeholder" id="father-name" type="text" placeholder="Отчество, если желаете">
+            <input class="form__placeholder"
+                    id="father-name" type="text" placeholder="Отчество, если желаете">
           </fieldset>
           <fieldset class="form__fieldset">
             <legend class="form__legend form__legend-line">Тел</legend>
