creates media dor catalog video

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -121,7 +121,7 @@
               </div>
             </a>
           </li>
-          <li class="catalog__item">
+          <li class="catalog__item catalog__item-video">
             <div class="catalog__process">
               <img class="catalog__img" src="https://via.placeholder.com/150x150"
                     width="32" height="22"
@@ -129,6 +129,7 @@
               <p class="catalog__title catalog__title-process">Процесс производства</p>
             </div>
             <img class="catalog__video" src="img/video-mobile@1x.jpg"
+                  srcset="img/video-mobile@1x.jpg 767w, img/video-tablet@1x.jpg 1149w, img/video-desktop@1x.jpg"
                   width="260" height="150"
                   alt="Процесс производства">
             <p class="catalog__text catalog__text-process">
